--- a/profile/themes/os_base/scss/_overrides.scss
+++ b/profile/themes/os_base/scss/_overrides.scss
@@ -31,6 +31,7 @@
 @import "component/table";
 @import "component/button";
 @import "component/gallery-grid";
+@import "component/rss-feed";
 // jQuery UI style overrides.
 @import "jquery-ui/autocomplete";
 
