--- a/profile/themes/dark/scss/style.scss
+++ b/profile/themes/dark/scss/style.scss
@@ -14,4 +14,6 @@
 @import 'components/tabs';
 @import 'components/button';
 @import 'components/pager';
+@import 'components/taxonomy-widget';
+
 @import './../../os_base/scss/base/poweredby_common';
