--- a/profile/themes/hwpi_widener/scss/style.scss
+++ b/profile/themes/hwpi_widener/scss/style.scss
@@ -15,3 +15,6 @@
 @import 'global/global';
 
 @import 'pages/pages';
+
+/**** adding taxonomy widget common ****/
+@import '../../os_base/scss/base/taxonomy-widget-common';
