--- a/profile/themes/modern/scss/style.scss
+++ b/profile/themes/modern/scss/style.scss
@@ -17,3 +17,6 @@
 
 @import 'pages/pages';
 @import 'pages/searchpages';
+
+/**** adding taxonomy widget common ****/
+@import '../../os_base/scss/base/taxonomy-widget-common';
