--- a/profile/themes/hwpi_classic/scss/style.scss
+++ b/profile/themes/hwpi_classic/scss/style.scss
@@ -12,3 +12,6 @@
 @import 'global/global';
 
 @import 'pages/pages';
+
+/**** adding taxonomy widget common ****/
+@import '../../os_base/scss/base/taxonomy-widget-common';
