--- a/profile/themes/hwpi_college/scss/style.scss
+++ b/profile/themes/hwpi_college/scss/style.scss
@@ -13,5 +13,6 @@
 @import 'components/navbar';
 @import 'components/search';
 @import 'components/calendar';
+@import 'components/taxonomy-widget';
 
 @import 'pages/search';
