--- a/profile/themes/os_base/scss/component/_taxonomy-widget.scss
+++ b/profile/themes/os_base/scss/component/_taxonomy-widget.scss
@@ -7,7 +7,7 @@
 .block--type-taxonomy {
   .block-content {
     > .os-widgets-taxonomy-display-type-menu {
-      border: 1px solid;
+      border: 1px solid $color-light-gray14;
       border-top: 0;
       a {
         display: block;
@@ -21,7 +21,7 @@
           background: #e3e3e1;
         }
       }
-      border-top: 1px solid;
+      border-top: 1px solid $color-light-gray14;
       .item-list {
         a {
           padding-left: 19px;
