--- a/profile/themes/vibrant/scss/style.scss
+++ b/profile/themes/vibrant/scss/style.scss
@@ -11,6 +11,7 @@
 @import 'component/footer';
 @import 'component/search';
 @import 'component/calendar';
+@import 'component/taxonomy-widget';
 
 @import 'global/global';
 
