--- a/profile/themes/os_base/scss/base/_variables.scss
+++ b/profile/themes/os_base/scss/base/_variables.scss
@@ -20,6 +20,7 @@ $color-light-gray11: #dddddd;
 $color-light-gray12: #fafafa;
 $color-light-gray13: #959595;
 $color-light-gray14: #EBE3DF;
+$color-light-gray15: #e3e3e1;
 $color-black1: #1e1e1e;
 $color-link1: #215990;
 $color-link2: #2769AC;
