--- a/profile/modules/custom/os_pager/templates/os-views-pager.html.twig
+++ b/profile/modules/custom/os_pager/templates/os-views-pager.html.twig
@@ -1,18 +1,18 @@
 {#
 /**
  * @file
- * Default theme implementation for a views mini-pager.
+ * Default theme implementation for a os views pager.
  *
  * Available variables:
  * - items: List of pager items.
+ * - pager_total: Number of pages.
  *
- * @see template_preprocess_views_mini_pager()
+ * @see template_preprocess_os_views_pager()
  *
  * @ingroup themeable
  */
 #}
 {% if items.previous or items.next %}
-  <nav role="navigation" aria-labelledby="pagination-heading">
     <h4 class="visually-hidden">{{ 'Pagination'|t }}</h4>
     <ul class="js-pager__items">
       {% if items.previous %}
