#12130: code added for twittter feed ui image

--- a/profile/themes/os_base/scss/_overrides.scss
+++ b/profile/themes/os_base/scss/_overrides.scss
@@ -33,6 +33,7 @@
 @import "component/gallery-grid";
 @import "component/taxonomy-widget";
 @import "component/rss-feed";
+@import "component/twitter-widget";
 // jQuery UI style overrides.
 @import "jquery-ui/autocomplete";
 
