#12130: code added for twittter feed ui image variables

--- a/profile/themes/os_base/scss/base/_variables.scss
+++ b/profile/themes/os_base/scss/base/_variables.scss
@@ -21,6 +21,7 @@ $color-light-gray12: #fafafa;
 $color-light-gray13: #959595;
 $color-light-gray14: #EBE3DF;
 $color-light-gray15: #e3e3e1;
+$color-light-gray16: #efefef;
 $color-black1: #1e1e1e;
 $color-link1: #215990;
 $color-link2: #2769AC;
