--- a/profile/themes/os_base/scss/component/_twitter-widget.scss
+++ b/profile/themes/os_base/scss/component/_twitter-widget.scss
@@ -1,5 +1,5 @@
 .twitter-pull-item {
-  border-bottom: 1px solid #efefef;
+  border-bottom: 1px solid $color-light-gray16;
   margin: 0 0 10px 0;
   padding-bottom: 10px;
   .tweet-authorphoto {
