Issue #12186 - Extend doc with available variables

--- a/profile/modules/custom/os_pager/templates/os-views-pager.html.twig
+++ b/profile/modules/custom/os_pager/templates/os-views-pager.html.twig
@@ -6,6 +6,10 @@
  * Available variables:
  * - items: List of pager items.
  * - pager_total: Number of pages.
+ * - tags: Provides link text for the next/previous links.
+ * - element: The pager's id.
+ * - parameters: Any extra GET parameters that should be retained, such as
+ *   exposed input.
  *
  * @see template_preprocess_os_views_pager()
  *
