--- a/profile/themes/os_admin/scss/base/_variables.scss
+++ b/profile/themes/os_admin/scss/base/_variables.scss
@@ -5,6 +5,7 @@ $color-gray1: #757575;
 $color-gray2: #6c757d;
 $color-gray3: #ddd;
 $color-gray4: #888;
+$color-gray5: #ccc;
 $color-dark-gray: #434343;
 $color-blue: #3E77BB;
 $color-text: #444;
