--- a/profile/themes/os_admin/scss/components/_taxonomy-tree.scss
+++ b/profile/themes/os_admin/scss/components/_taxonomy-tree.scss
@@ -1,5 +1,5 @@
 .fieldgroup.term-reference-tree-collapsed {
-  border: 1px solid #CCC;
+  border: 1px solid $color-gray5;
   padding-left: 10px;
   padding-right: 10px;
   ul {
