--- a/profile/modules/custom/os_pager/templates/os-views-pager.html.twig
+++ b/profile/modules/custom/os_pager/templates/os-views-pager.html.twig
@@ -27,6 +27,7 @@
  */
 #}
 {% if items.previous or items.next %}
+  <nav role="navigation" aria-labelledby="pagination-heading">
     <h4 class="visually-hidden">{{ 'Pagination'|t }}</h4>
     <ul class="js-pager__items">
       {% if items.previous %}
