--- a/profile/modules/custom/os_pager/templates/os-views-pager.html.twig
+++ b/profile/modules/custom/os_pager/templates/os-views-pager.html.twig
@@ -4,6 +4,7 @@
  * Default theme implementation for a os views pager.
  *
  * Available variables:
+ * - heading_id: Pagination heading ID.
  * - items: List of pager items.
  *   The list is keyed by the following elements:
  *   - previous: Item for the previous page; not present on the first page
@@ -27,8 +28,8 @@
  */
 #}
 {% if items.previous or items.next %}
-  <nav role="navigation" aria-labelledby="pagination-heading">
-    <h4 class="visually-hidden">{{ 'Pagination'|t }}</h4>
+  <nav role="navigation" aria-labelledby="{{ heading_id }}">
+    <h4 id="{{ heading_id }}" class="visually-hidden">{{ 'Pagination'|t }}</h4>
     <ul class="js-pager__items">
       {% if items.previous %}
         <li>
