#12186: fixed mini pager ui

--- a/profile/themes/os_base/scss/component/_pager.scss
+++ b/profile/themes/os_base/scss/component/_pager.scss
@@ -10,5 +10,15 @@
     }
   }
 }
+.pager-mini {
+  text-align: center;
+  li {
+    display: inline;
+    padding: .7em;
+    &.current {
+      font-weight: bold;
+    }
+  }
+}
 /**** full pager ****/
 @include pager($color-link1);
