--- a/profile/modules/custom/os_pager/templates/os-views-pager.html.twig
+++ b/profile/modules/custom/os_pager/templates/os-views-pager.html.twig
@@ -30,7 +30,7 @@
 {% if items.previous or items.next %}
   <nav role="navigation" aria-labelledby="{{ heading_id }}">
     <h4 id="{{ heading_id }}" class="visually-hidden">{{ 'Pagination'|t }}</h4>
-    <ul class="js-pager__items">
+    <ul class="js-pager__items pager-mini">
       {% if items.previous %}
         <li>
           <a href="{{ items.previous.href }}" title="{{ 'Go to previous page'|t }}" rel="prev"{{ items.previous.attributes|without('href', 'title', 'rel') }}>
@@ -40,7 +40,7 @@
         </li>
       {% endif %}
       {% if items.current %}
-        <li>
+        <li class="current">
           {% trans %}
             {{ items.current }} of {{ pager_total }}
           {% endtrans %}
