--- a/profile/themes/os_base/scss/component/_pager.scss
+++ b/profile/themes/os_base/scss/component/_pager.scss
@@ -12,6 +12,10 @@
 }
 .pager-mini {
   text-align: center;
+  margin-top: 30px;
+  aside & {
+    margin-top: 18px;
+  }
   li {
     display: inline;
     padding: .7em;
