Issue #12372: fixed alt tag and color contrast issues (#12374)
* Issue #12372: fixed alt tag and color contrast issues

* Issue #12372 - fixes accessibility fixes

* Issue #12372 - fix code

* Issue #12372: added translate to string

--- a/profile/modules/apps/os_widgets/css/layout.form.css
+++ b/profile/modules/apps/os_widgets/css/layout.form.css
@@ -133,3 +133,7 @@ nav.ui-sortable-helper ul.menu {
 #drupal-off-canvas .form-type-vertical-tabs {
   display: none;
 }
+
+.addthis-description p {
+  margin: 10px 0 0 0;
+}
