--- a/profile/modules/apps/os_widgets/templates/os-widgets-addthis-field-description.html.twig
+++ b/profile/modules/apps/os_widgets/templates/os-widgets-addthis-field-description.html.twig
@@ -1,10 +1,12 @@
-<p>Buttons</p>
-<img src="/{{ image_base_path }}/addthis_button.png" />
-<p>Toolbox small</p>
-<img src="/{{ image_base_path }}/addthis_sm.png" />
-<p>Toolbox large</p>
-<img src="/{{ image_base_path }}/addthis_lg.png" />
-<p>Numeric</p>
-<img src="/{{ image_base_path }}/addthis_numbers.gif" />
-<p>Counter</p>
-<img src="/{{ image_base_path }}/addthis_counter.png" />
+<div class="addthis-description">
+  <p>{{ 'Buttons'|t }}</p>
+  <img src="/{{ image_base_path }}/addthis_button.png" alt="addthis-button" />
+  <p>{{ 'Toolbox small'|t }}</p>
+  <img src="/{{ image_base_path }}/addthis_sm.png" alt="addthis-small" />
+  <p>{{ 'Toolbox large'|t }}</p>
+  <img src="/{{ image_base_path }}/addthis_lg.png" alt="addthis-large" />
+  <p>{{ 'Numeric'|t }}</p>
+  <img src="/{{ image_base_path }}/addthis_numbers.gif" alt="addthis-numeric" />
+  <p>{{ 'Counter'|t }}</p>
+  <img src="/{{ image_base_path }}/addthis_counter.png" alt="addthis-counter" />
+</div>
