--- a/profile/themes/os_base/scss/component/_tabs.scss
+++ b/profile/themes/os_base/scss/component/_tabs.scss
@@ -20,7 +20,7 @@
   > .nav-tabs {
     border-bottom: 0;
     .summary {
-      color: $nav-disabled-link-color;
+      color: $color-gray1;
       font-size: $font-size-small;
     }
   }
