--- a/profile/themes/os_base/templates/menu/menu.html.twig
+++ b/profile/themes/os_base/templates/menu/menu.html.twig
@@ -44,7 +44,7 @@
         {# Must use link() here so it triggers hook_link_alter(). #}
         {{ link(link_title, item.url, link_attributes.addClass(item.in_active_trail ? 'active-trail')) }}
         {% if item.is_expanded and item.below %}
-          <a href="#" class="dropmenu-child glyphicon glyphicon-plus"></a>
+          <a aria-hidden="true" class="dropmenu-child glyphicon glyphicon-plus"></a>
         {% endif %}
         {% if item.below %}
           {{ _self.menu_links(item.below, attributes.removeClass(classes), menu_level + 1, classes, dropdown_classes) }}
