Issue #12380 - accessibility fixes added description to markup… (#12395)
* Issue #12380 - accessibility fixes added descriptn to markp in code

* Issue #12380 - fixed tranlation

--- a/profile/themes/os_base/scss/component/_widgtes.scss
+++ b/profile/themes/os_base/scss/component/_widgtes.scss
@@ -204,6 +204,9 @@
           float: left;
           width: 50%;
         }
+        .description.full {
+          clear: both;
+        }
       }
     }
   }
