Issue #12385: widget delet button ui (#12391)
* Issue #12385: fixed delete and cancle butoon ui in widgets

* Issue #12385 - added del icon to delete button

* Issue #12385 - added space after del button

* Issue #12385 - fixed array

* Issue #12385 - fixed color in btn when link tag is there

--- a/profile/themes/os_base/scss/component/_button.scss
+++ b/profile/themes/os_base/scss/component/_button.scss
@@ -3,21 +3,23 @@
   border: 1px solid $color-gray3;
   color: $color-white;
 }
-.btn-success {
+.btn.btn-success {
   background: $color-green;
   border-color: $color-green;
+  color: $color-white;
 }
-.btn-danger {
+.btn.btn-danger {
   background: $color-danger;
   border-color: $color-danger;
+  color: $color-white;
 }
-.btn-warning {
+.btn.btn-warning {
   color: $color-black;
   &:hover,&:active,&:focus {
     color: $color-black;
   }
 }
-.btn-info {
+.btn.btn-info {
   color: $color-black;
   &:hover,&:active,&:focus {
     color: $color-black;
