--- a/profile/themes/os_base/scss/component/_form.scss
+++ b/profile/themes/os_base/scss/component/_form.scss
@@ -129,3 +129,9 @@ fieldset {
     font-size: 1.1em;
   }
 }
+/**** block content form ****/
+.block-content-form {
+  .form-group.form-actions {
+    margin-bottom: 10px;
+  }
+}
