--- a/profile/themes/os_admin/scss/components/_forms.scss
+++ b/profile/themes/os_admin/scss/components/_forms.scss
@@ -17,12 +17,23 @@ textarea.form-textarea {
   border: 1px solid $color-light-gray2;
   border-top-color: $color-light-gray2;
 }
-
 .cp-settings-form #edit-default-image {
   max-width: 900px;
 }
-
 /**** error msg color ****/
 .form-item--error-message {
   color: $color-red;
+}
+/**** add from label ****/
+label {
+  span {
+    &.block {
+      width: 100%;
+      display: block;
+    }
+  }
+}
+/**** global form label ****/
+.form-item label.option {
+  font-size: 0.923em;
 }
