Issue #12208: add widget title field template (#12209)
* Issue #12208: add widget title fiel template

* Issue #12208 - added widget title as block title

* Issue #12208 - displaying block title ui in place blokc page same as in view pages

--- a/profile/modules/apps/os_widgets/css/layout.form.css
+++ b/profile/modules/apps/os_widgets/css/layout.form.css
@@ -81,8 +81,16 @@ nav.ui-sortable-helper ul.menu {
   width: auto;
 }
 
+#block-list h2.block-title {
+  display: none;
+}
+
 .block-place-region .block-title {
   display: none;
+}
+
+.block-place-region section .block-title {
+  display: block;
 }
 
 #block-place-widget-selector-wrapper .block-title {
