--- a/profile/themes/os_base/templates/block/block.html.twig
+++ b/profile/themes/os_base/templates/block/block.html.twig
@@ -62,7 +62,7 @@
 
   {% block content %}
     <div{{ content_attributes.addClass('block-content') }}>
-      {{ content }}
+      {{ content|without('field_widget_title') }}
     </div>
   {% endblock %}
 </section>
