Issue #12131 - theme preview ui changes (#12411)

--- a/profile/themes/os_base/scss/_overrides.scss
+++ b/profile/themes/os_base/scss/_overrides.scss
@@ -34,6 +34,7 @@
 @import "component/taxonomy-widget";
 @import "component/rss-feed";
 @import "component/twitter-widget";
+@import "component/theme-preview";
 // jQuery UI style overrides.
 @import "jquery-ui/autocomplete";
 
