Issue #11899 - fixed image align padding and height width attribute not appearing on node page

--- a/profile/themes/os_base/scss/base/_common.scss
+++ b/profile/themes/os_base/scss/base/_common.scss
@@ -114,3 +114,11 @@ p {
 address {
   font-style: italic;
 }
+.cke_widget_image {
+  &[style*="float: left"] {
+    padding-right: 15px;
+  }
+  &[style*="float: right"] {
+    padding-left: 15px;
+  }
+}
