Issue #12429 - fixed focus lost on media upload and edit media popup position

--- a/profile/modules/os/modules/os_media/templates/field.html
+++ b/profile/modules/os/modules/os_media/templates/field.html
@@ -6,7 +6,7 @@
          ngf-hide-on-drop-not-available="true" ngf-accept="validate($file)" ng-hide="fieldIsFull()">
         <span id="drag-text">{{droppable_text}}<span class="help_icon" ng-mouseenter="showHelp = true" ng-mouseleave="showHelp = false" ng-hide="hideHelpicon">?</span></span>
 
-        <a href="#" mb-open-modal panes="{{panes.join(',')}}" types="{{types}}" on-select="addFile($inserted)">{{upload_text}}</a>
+        <a href="#" id="upmedia" mb-open-modal panes="{{panes.join(',')}}" types="{{types}}" on-select="addFile($inserted)">{{upload_text}}</a>
         <div class="help" ng-show="showHelp"><strong>Allowed file types:</strong><br /> {{extensionsFull.join(' ')}}<br /><br />
                <strong>Max file size:</strong> {{maxFilesize}}.
         </div>
