Issue #12429 - fixed tabbing issue

--- a/profile/modules/os/modules/os_media/templates/browser.html
+++ b/profile/modules/os/modules/os_media/templates/browser.html
@@ -110,14 +110,14 @@
                 <span class="mb-file-actions">&nbsp;</span>
             </div>
             <div js-pager="file in files | mbFilename:$parent.search | mbType:availFilter | mbType:filteredTypes | mbExtensions:extensions | filter:{status:'!deleting'} | orderBy:sortType:sortReverse track by file.id" page-size="5">
-                <div class="media-row" data-fid="{{file.mid}}" ng-click="setSelection(file.mid)" ng-class="{selected : selection == file.mid, new : file.new}">
+                <div class="media-row" tabindex="0" data-fid="{{file.mid}}" id="file-{{file.mid}}" ng-keydown="$event.keyCode === 13 && setSelection(file.mid)" ng-click="setSelection(file.mid)" ng-class="{selected : selection == file.mid, new : file.new}">
                     <span class="mb-preview"><img ng-src="{{file.thumbnail}}"></span>
                     <span class="mb-title">{{file.name}}</span>
                     <span class="mb-filename">{{file.filename}}</span>
                     <span class="mb-created">{{(file.created + '000') | date:'short'}}</span>
                     <span class="mb-file-actions">
-                        <span class="mb-actions-edit" ng-click="setSelection(file.mid); selected_file.new = false; selected_file.replaced = false; changePanes('edit')">Edit</span>
-                        <span class="mb-actions-delete" ng-click="setSelection(file.mid); changePanes('delete')">Delete</span>
+                        <span class="mb-actions-edit" tabindex="0" ng-keyPress="$event.keyCode === 13 && setSelection(file.mid);changePanes('edit');" ng-click="setSelection(file.mid); selected_file.new = false; selected_file.replaced = false; changePanes('edit')">Edit</span>
+                        <span class="mb-actions-delete" tabindex="0" ng-keyPress="$event.keyCode === 13 && setSelection(file.mid);changePanes('delete')" ng-click="setSelection(file.mid); changePanes('delete')">Delete</span>
                     </span>
                 </div>
             </div>
