Issue #12446 - fixed focused issue in the advanced menu cp menu build

--- a/profile/themes/os_admin/scss/components/_entityMedia.scss
+++ b/profile/themes/os_admin/scss/components/_entityMedia.scss
@@ -14,11 +14,11 @@
   }
   .seven-details {
     @extend .entity-meta__header;
-    &:focus-within {
-      outline: 1px solid;
-    }
   }
 }
 .seven-details {
   border: 1px solid $color-light-gray2;
+  &:focus-within, &:focus {
+    outline: 1px solid;
+  }
 }
