Issue #12448 - fixed tabbing issue in theme selection

--- a/profile/modules/cp/modules/cp_appearance/templates/cp-appearance-themes-page.html.twig
+++ b/profile/modules/cp/modules/cp_appearance/templates/cp-appearance-themes-page.html.twig
@@ -69,7 +69,7 @@
               'clearfix',
             ]
           %}
-          <div{{ theme.attributes.addClass(theme_classes) }} data-attr="{{theme_machine_name}}">
+          <div{{ theme.attributes.addClass(theme_classes) }} data-attr="{{theme_machine_name}}" tabindex="0">
           <div class="theme-screenshot">
               {% if theme.screenshot %}
                 {{ theme.screenshot }}
