Issue #12429 - fixed function name

--- a/profile/modules/os/modules/os_media/templates/browser.html
+++ b/profile/modules/os/modules/os_media/templates/browser.html
@@ -138,7 +138,7 @@
 
             <div class="actions">
                 <button ng-click="$parent.deleteConfirmed()">Delete</button>
-                <button ng-click="$parent.deleteCancle()">Cancel</button>
+                <button ng-click="$parent.deleteCancel()">Cancel</button>
             </div>
         </div>
     </div>
