--- a/profile/modules/apps/os_widgets/css/layout.form.css
+++ b/profile/modules/apps/os_widgets/css/layout.form.css
@@ -145,3 +145,10 @@ nav.ui-sortable-helper ul.menu {
 .addthis-description p {
   margin: 10px 0 0 0;
 }
+
+/**
+ * Do not show contextual links when in place block variant.
+ */
+.contextual .trigger {
+  display: none;
+}
