Issue #11897 - Test fixes.

--- a/profile/modules/os/modules/os_media/templates/os-slick-wrapper.html.twig
+++ b/profile/modules/os/modules/os_media/templates/os-slick-wrapper.html.twig
@@ -8,6 +8,8 @@
  *   which can be re-position using option Thumbnail position.
  * - attributes: HTML attributes to be applied to the list.
  * - settings: An array containing the given settings.
+ * - videos: A list of videos as links.
+ * - others: An array of other media entities.
  *
  * @ingroup themeable
  */
