--- a/profile/themes/os_admin/scss/components/_ui-dialog.scss
+++ b/profile/themes/os_admin/scss/components/_ui-dialog.scss
@@ -1,11 +1,14 @@
-div.ui-dialog, div.cke_reset_all {
-  .ui-dialog-titlebar, .cke_dialog_title {
+div.ui-dialog,
+div.cke_reset_all {
+  .ui-dialog-titlebar,
+  .cke_dialog_title {
     background: $color-blue;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     padding: 15px 49px 15px 15px;
   }
-  .ui-dialog-titlebar-close, .cke_dialog_close_button {
+  .ui-dialog-titlebar-close,
+  .cke_dialog_close_button {
     border-color: $color-white;
     color: $color-white;
   }
@@ -14,7 +17,7 @@ div.ui-dialog, div.cke_reset_all {
   color: $color-blue !important;
 }
 /**** ui dialog ckeditor ****/
- div.cke_reset_all {
+div.cke_reset_all {
   .cke_dialog {
     .cke_dialog_close_button {
       top: 10px;
@@ -23,6 +26,22 @@ div.ui-dialog, div.cke_reset_all {
       border: 3px solid $color-white;
       border-radius: 5px;
       background-position: center;
+    }
+  }
+}
+/**** add new user ****/
+.cp-users-add-existing-user-member {
+  fieldset {
+    .button {
+      background: none;
+      color: $color-link;
+      font-weight: normal;
+      margin: 0;
+      padding: 0;
+      &:hover {
+        box-shadow: none;
+        text-decoration: underline;
+      }
     }
   }
 }
