--- a/profile/modules/os/modules/os_media/templates/browser.html
+++ b/profile/modules/os/modules/os_media/templates/browser.html
@@ -1,11 +1,11 @@
 <div class="container-fluid" ng-switch="pane">
     <div class="media-browser-buttons" ng-show="pane != 'edit' && pane != 'delete'" role="tablist" aria-label="Media Tabs">
-        <div role="tab" tabindex="0" class="media-browser-button" ng-class="{active:pane=='upload'}" ng-show="activePanes.upload" ng-click="changePanes('upload')" ng-keydown="$event.keyCode === 13 && changePanes('upload')">Upload from your computer</div>
-        <div role="tab" tabindex="0" class="media-browser-button" ng-class="{active:pane=='web'}" ng-show="activePanes.web" ng-click="changePanes('web')" ng-keydown="$event.keyCode === 13 && changePanes('web')">Embed from the web</div>
-        <div role="tab" tabindex="0" class="media-browser-button" ng-class="{active:pane=='library'}" ng-show="activePanes.library" ng-click="changePanes('library')" ng-keydown="$event.keyCode === 13 && changePanes('library')">Previously uploaded files</div>
+        <div role="tab" tabindex="0" aria-selected="{{pane == 'upload'? true: false}}" class="media-browser-button" ng-class="{active:pane=='upload'}" ng-show="activePanes.upload" ng-click="changePanes('upload')" ng-keydown="$event.keyCode === 13 && changePanes('upload')">Upload from your computer</div>
+        <div role="tab" tabindex="0" aria-selected="{{pane == 'web'? true: false}}" class="media-browser-button" ng-class="{active:pane=='web'}" ng-show="activePanes.web" ng-click="changePanes('web')" ng-keydown="$event.keyCode === 13 && changePanes('web')">Embed from the web</div>
+        <div role="tab" tabindex="0" aria-selected="{{pane == 'library'? true: false}}" class="media-browser-button" ng-class="{active:pane=='library'}" ng-show="activePanes.library" ng-click="changePanes('library')" ng-keydown="$event.keyCode === 13 && changePanes('library')">Previously uploaded files</div>
     </div>
     <div class="media-browser-panes">
-        <div class="media-browser-pane" ng-switch-when="upload" ng-click="$parent.extensionFailure = false">
+        <div class="media-browser-pane" role="tabpanel" ng-switch-when="upload" ng-click="$parent.extensionFailure = false">
             <div ngf-drop ngf-change="$parent.checkForDupes($files, $event)" class="media-browser-drop-box"
                  ngf-drag-over-class="media-browser-drag-over" ngf-multiple="true" allow-dir="true"
                  ngf-hide-on-drop-not-available="true" ngf-accept="$parent.validate($file)">
@@ -53,7 +53,7 @@
                 <button value="cancel" ng-click="cancel()">Cancel</button>
             </div>
         </div>
-        <div class="media-browser-pane" ng-switch-when="web">
+        <div class="media-browser-pane" role="tabpanel" ng-switch-when="web">
             <label for="media-browser-web">URL or HTML:</label>
             <textarea id="media-browser-web" cols="60" rows="5" ng-model="$parent.embed" placeholder="Enter the URL or HTML here"></textarea>
             <div class="description embedly">Enter a URL from one of
@@ -82,7 +82,7 @@
                 <button value="cancel" ng-click="$parent.cancel()">Cancel</button>
             </div>
         </div>
-        <div class="media-browser-pane" ng-switch-when="library">
+        <div class="media-browser-pane" role="tabpanel" ng-switch-when="library">
             <div class="loading" ng-show="loading">
                 Please wait while we get information on your files.<br />
                 <div class="progress-bar progress-striped"><div class="progress-bar-completed" style="width: 100%"></div></div><br />
