--- a/profile/themes/os_base/scss/component/_dropdown.scss
+++ b/profile/themes/os_base/scss/component/_dropdown.scss
@@ -37,3 +37,9 @@ $grid-breakpoint: "screen and (min-width: #{$grid-float-breakpoint})";
     }
   }
 }
+// dropdown toggle
+.dropdown-toggle:focus {
+  outline: thin dotted; // FireFox
+  outline: 5px auto -webkit-focus-ring-color; // Chrome, Safari
+  outline-offset: -2px;
+}
