--- a/profile/themes/os_base/scss/component/_navbar.scss
+++ b/profile/themes/os_base/scss/component/_navbar.scss
@@ -67,6 +67,25 @@ body {
     padding-left: 0;
   }
 }
+
+// nav hover and focus
+.nav {
+  li {
+    ul {
+      visibility: hidden;
+      opacity: 0;
+      transition: all 0.5s ease;
+      display: none;
+    }
+    &:hover, &:focus-within {
+      > ul {
+        visibility: visible;
+        opacity: 1;
+        display: block;
+      }
+    }
+  }
+}
 nav {
   &:before, &:after {
     content: "";
