--- a/profile/modules/apps/os_widgets/templates/os-widgets-follow-me.html.twig
+++ b/profile/modules/apps/os_widgets/templates/os-widgets-follow-me.html.twig
@@ -6,7 +6,7 @@
       {% if rss_feed %}
         <li class="rss-follow-icon">
           <a href ="#" target="_blank">
-           <img src="/profiles/contrib/openscholar/themes/os_base/images/rss.png" width="24" height="28" alt="RSS Feed" title="Syndicate content"></a>
+           <img src="/profiles/contrib/openscholar/themes/os_base/images/rss.png" width="24" height="24" alt="RSS Feed" title="Syndicate content">
             <span class="rrssb-text">RSS</span>
           </a>
         </li>
