Issue #12331 - Added Rss Feed page url.

--- a/profile/modules/apps/os_widgets/templates/os-widgets-follow-me.html.twig
+++ b/profile/modules/apps/os_widgets/templates/os-widgets-follow-me.html.twig
@@ -5,7 +5,7 @@
     <ul class="rrssb-buttons">
       {% if rss_feed %}
         <li class="rss-follow-icon">
-          <a href ="#" target="_blank">
+          <a href ="/rss" target="_blank">
            <img src="/profiles/contrib/openscholar/themes/os_base/images/rss.png" width="24" height="24" alt="RSS Feed" title="Syndicate content">
             <span class="rrssb-text">RSS</span>
           </a>
