--- a/profile/themes/os_base/scss/global/_global.scss
+++ b/profile/themes/os_base/scss/global/_global.scss
@@ -33,6 +33,7 @@ h2.block-title {
   margin-bottom: 8px;
 }
 .field--name-body .img-responsive,
-.field--name-body .field--name-field-media-oembed-content.field--mode-wysiwyg {
+.field--name-body .field--name-field-media-oembed-content.field--mode-wysiwyg,
+.field--name-body .field--name-field-media-html.field--mode-wysiwyg {
   display: inline-block;
 }
