Issue #12333 - fixed form ui on small devices and accessibility issues

--- a/profile/modules/apps/os_widgets/templates/os-widgets-mailchimp-link.html.twig
+++ b/profile/modules/apps/os_widgets/templates/os-widgets-mailchimp-link.html.twig
@@ -10,4 +10,4 @@
  * - subscribe_text: Subscription text.
  */
 #}
-<a class="use-ajax button button--small" data-dialog-type= 'modal' href="{{ link_url }}">{{ subscribe_text|default('Subscribe to list!')|t }}</a>
+<a class="use-ajax btn btn-default" data-dialog-type= 'modal' href="{{ link_url }}">{{ subscribe_text|default('Subscribe to list!')|t }}</a>
