--- a/profile/themes/os_base/scss/_overrides.scss
+++ b/profile/themes/os_base/scss/_overrides.scss
@@ -35,6 +35,7 @@
 @import "component/rss-feed";
 @import "component/twitter-widget";
 @import "component/theme-preview";
+@import "component/mailchimp";
 // jQuery UI style overrides.
 @import "jquery-ui/autocomplete";
 
