Issue #12537 - fixed node form border issue (#12538)

--- a/profile/themes/os_admin/scss/base/_variables.scss
+++ b/profile/themes/os_admin/scss/base/_variables.scss
@@ -6,6 +6,7 @@ $color-gray2: #6c757d;
 $color-gray3: #ddd;
 $color-gray4: #888;
 $color-gray5: #ccc;
+$color-gray6: #8e929c;
 $color-dark-gray: #434343;
 $color-blue: #3E77BB;
 $color-text: #444;
