Issue #12503 - added colon to see also and align last updated… (#12543)

--- a/profile/themes/adams/scss/base/_common.scss
+++ b/profile/themes/adams/scss/base/_common.scss
@@ -1,6 +1,6 @@
 //@extend-elements
 %extend_1 {
-  background-color: $color_squirrel_approx;
+  background-color: $color_squirrel_approx1;
   color: $white;
   padding: .5em 1em;
   margin-bottom: 15px;
