--- a/profile/themes/adams/scss/base/_variables.scss
+++ b/profile/themes/adams/scss/base/_variables.scss
@@ -1,6 +1,7 @@
 //colors
 $color_st_tropaz_approx: #215990;
 $color_squirrel_approx: #8c8179;
+$color_squirrel_approx1: #5e5854;
 $white: #fff;
 $color_tundora_approx: #444;
 $color_mexican_red_approx: #a51c30;
