Issue #12504 - Revert template extra ":"

--- a/profile/modules/cp/modules/cp_taxonomy/templates/cp-taxonomy-comma-separator.html.twig
+++ b/profile/modules/cp/modules/cp_taxonomy/templates/cp-taxonomy-comma-separator.html.twig
@@ -15,7 +15,7 @@
 <div class="more-tags">
 {% endif %}
   <div class="see-more-tag">
-    <strong>{{ title }}: </strong>
+    <strong>{{ title }}</strong>
     {% for item in items %}
       {{ item|render }}{% if not loop.last %}{{ ', ' }}{% endif %}
     {% endfor %}
