Issue #12539 - added new theme branded

--- a/profile/themes/os_base/scss/component/_navbar.scss
+++ b/profile/themes/os_base/scss/component/_navbar.scss
@@ -69,19 +69,21 @@ body {
 }
 
 // nav hover and focus
-.nav {
-  li {
-    ul {
-      visibility: hidden;
-      opacity: 0;
-      transition: all 0.5s ease;
-      display: none;
-    }
-    &:hover, &:focus-within {
-      > ul {
-        visibility: visible;
-        opacity: 1;
-        display: block;
+@media #{$tablet} {
+  .nav {
+    li {
+      ul {
+        visibility: hidden;
+        opacity: 0;
+        transition: all 0.5s ease;
+        display: none;
+      }
+      &:hover, &:focus-within {
+        > ul {
+          visibility: visible;
+          opacity: 1;
+          display: block;
+        }
       }
     }
   }
