--- a/profile/modules/apps/os_widgets/templates/os-widgets-follow-me.html.twig
+++ b/profile/modules/apps/os_widgets/templates/os-widgets-follow-me.html.twig
@@ -25,10 +25,11 @@
         </li>
       {% endif %}
       {% for link in profile_links %}
-        <li class="rrssb-{{ link.domain }}">
-          <a href ="{{ link.title }}" target="_blank">
+      {% set rrssb_class = link.title == 'Google+' ? 'googleplus' :  link.title %}
+        <li class="rrssb-{{ rrssb_class }}">
+          <a href ="{{ link.domian }}" target="_blank">
             <span class="rrssb-icon"></span>
-            <span class="rrssb-text">{{ link.domain }}</span>
+            <span class="rrssb-text">{{ link.title |t }}</span>
           </a>
         </li>
       {% endfor %}
