Issue #12532 - fixed wysiwyg embed issues (#12550)
* Issue #12532 - fixed wysiwyg embed issues

* Issue #12532 - adding default width embed

--- a/profile/themes/os_base/scss/_overrides.scss
+++ b/profile/themes/os_base/scss/_overrides.scss
@@ -36,6 +36,7 @@
 @import "component/twitter-widget";
 @import "component/theme-preview";
 @import "component/mailchimp";
+@import "component/wysiwyg";
 // jQuery UI style overrides.
 @import "jquery-ui/autocomplete";
 
